--- a/pages/highscores.html
+++ b/pages/highscores.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>Highscores</title>
 
     <link rel="stylesheet" href="../assets/css/styles.css" />
@@ -12,12 +14,23 @@
   <body>
     <div class="wrapper">
       <h1>Highscores</h1>
-      <ol id="highscores"></ol>
+
+      <table class="table table-striped table-hover" id="score-table">
+        <tr>
+          <th>Name</th>
+          <th>Score</th>
+          <th>Date</th>
+        </tr>
+       
+      </table>
+
+      <!-- <ol id="highscores"></ol> -->
 
       <a href="../../index.html"><button>Go Back</button></a>
       <button id="clear">Clear Highscores</button>
     </div>
 
-    <script src="./assets/js/scores.js"></script>
+    <script src="../assets/js/scores.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
