--- a/pages/highscores.html
+++ b/pages/highscores.html
@@ -26,7 +26,7 @@
 
       <!-- <ol id="highscores"></ol> -->
 
-      <a href="../../index.html"><button>Go Back</button></a>
+      <a href="./../index.html"><button>Go Back</button></a>
       <button id="clear">Clear Highscores</button>
     </div>
 
