--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="icon" href="/assets/images/favicon.png">
   <title>Coding Quiz</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <link rel="stylesheet" href="./assets/css/styles.css" />
 </head>
@@ -19,7 +20,7 @@
   <div id="timer">Time: <span id="time">0</span></div>
 
   <div class="wrapper">
-    <div id="start-screen" class="start">
+    <section id="start-screen" class="start">
       <h1>Coding Quiz Challenge</h1>
       <p>
         Try to answer the following code-related questions within the time
@@ -27,30 +28,41 @@
         score/time by ten seconds!
       </p>
       <button id="start">Start Quiz</button>
-    </div>
 
-    <audio id="clock-ticker" class="hide" type="audio/mpeg" src="././assets/sfx/ticking-clock.mp3"  loop></audio>
 
-    <div id="questions" class="hide">
-     
+
+    </section>
+
+
+    <audio id="clock-ticker" class="hide" type="audio/mpeg" src="././assets/sfx/ticking-clock.mp3" loop></audio>
+
+    <section id="questions" class="hide">
+
       <h2 id="question-title"></h2>
       <div id="choices" class="choices"></div>
-    </div>
+    </section>
 
-    <div id="display-result" class="hide">
+    <section id="display-result" class="hide">
       <hr>
       <h2 id="result-value">Wrong!</h2>
 
-    </div>
+    </section>
 
-    <div id="end-screen" class="hide">
+    <section id="end-screen" class="hide">
       <h2 class="">All done!</h2>
       <p class="d-inline">Your final score is <span id="final-score"></span>.</p>
       <p>
         Enter initials: <input type="text" id="initials" max="3" />
         <button id="submit">Submit</button>
       </p>
-    </div>
+
+      <hr>
+      <div class="accordion-body" id="result-expander">
+        <h4>See How You Performed:</h4>
+
+      </div>
+
+    </section>
 
 
 
@@ -58,7 +70,9 @@
     <div id="feedback" class="feedback hide"></div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 
   <script type="module" src="./assets/js/questions.js"></script>
   <script type="module" src="./assets/js/logic.js"></script>
