--- a/pages/highscores.html
+++ b/pages/highscores.html
@@ -30,7 +30,7 @@
       <button id="clear">Clear Highscores</button>
     </div>
 
-    <script src="../assets/js/scores.js"></script>
+    <script type="module" src="../assets/js/scores.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
