--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <hr>
       <div class="accordion-body" id="result-expander">
-        <h4>See How You Performed:</h4>
+        <h4>Answers and explanations:</h4>
 
       </div>
 
