Added progress bar to quiz

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 
     <audio id="clock-ticker" class="hide" type="audio/mpeg" src="././assets/sfx/ticking-clock.mp3" loop></audio>
 
+    <div class="progress mb-4 hide" id="progress-bar-container" style="height: 10px;">
+      <div class="progress-bar" id="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10"></div>
+    </div>
+    
+
     <section id="questions" class="hide">
 
       <h2 id="question-title"></h2>
